move Table 1 & 2 out

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -215,9 +215,19 @@ where $M$ was the best catch model from step 1.  Thus models with covariates mod
 
 ## Catches in prior seasons as explanatory variables
 
-The monsoon catch models were compared against a "naive" model which was the "last year's catch" model (Table `r ref("tab:spawner_model_selection")`). The "naive" model has no estimated parameters and is a standard null model for time series modeling. Models with $ln(N_{t-1})$ (post-monsoon catch in prior year), whether linear or non-linear, as explanatory covariate were strongly supported over the naive model and over models with $ln(S_{t-1})$ (monsoon catch in prior year) as the explanatory variable.  Addition of the catch two years prior, $ln(N_{t-2})$ or $ln(S_{t-2})$, did not reduce AIC and for $ln(N_{t-2})$ led to either no decrease in the residual error (MASE) or an increased the residual error for the model with linearity (Table `r ref("tab:spawner_model_selection")`, Linearity test).  Addition of $ln(S_{t-2})$ did decrease the residual errors, but the was not warranted given the increased number of estimated parameters based on AIC. We also tested the support for non-linearity in the effect of the prior year catch on the monsoon catch.  This was done by comparing models with $ln(N_{t-1})$ or $ln(S_{t-1})$ included as a linear term or as a non-linear function $s()$ (Table `r ref("tab:spawner_model_selection")`, Linearity test).  The residual error decreased using a non-linear response at the cost increased degrees of freedom.  The result was only weak (non-significant) support for allowing a non-linear response based on AIC and the F-test.  The full set of models tested, including tests using catch during the spawning months in previous seasons as a covariate are shown in Tables `r ref("tabappA:spawner-model-linear", pre="A")` and `r ref("tabappA:spawner-model-nonlinear", pre="A")`.  The results were the same if we used the full landings data set from 1956 to 2015 (Table `r ref("tabappA:spawner-model-1956", pre="A")`).  Overall, the landings in prior seasons was only weakly explanatory for the monsoon catch, and the maximum adjusted $R^2$ for these models was less than 30% (Table `r ref("tab:spawner_model_selection")`).
+Using the 1984-2015 catch data, which is the time-period that overlaps our available environmental data, the Jul-Sep catch models were compared against a "naive" model in which the forecasted Jul-Sep catch was simply the Jul-Sep catch in the prior year.  The "naive" model has no estimated parameters and is a standard null model for time series modeling. Models with $ln(N_{t-1})$ (Oct-Mar catch in prior year), whether linear or non-linear, as the explanatory covariate were strongly supported over the naive model and over models with $ln(S_{t-1})$ (Jul-Sep catch in prior year) as the explanatory variable (Tables `r ref("tabappA:spawner-model-linear", pre="A")` and `r ref("tabappA:spawner-model-nonlinear", pre="A")`).  Addition of the catch two years prior, $ln(N_{t-2})$ or $ln(S_{t-2})$, did not reduce AIC or LOOCV for either the linear or non-linear models.  We tested the support for non-linearity in the effect of the prior year catch by comparing models with $ln(N_{t-1})$ or $ln(S_{t-1})$ included as a linear term or as a non-linear function $s()$ using GAMs (Table A2).  The residual error decreased using a non-linear response at the cost increased degrees of freedom.  The result was only weak (non-significant) support for allowing a non-linear response based on AIC and LOOCV.  
 
-The results on model structure were similar for models of the post-monsoon landings ($N_t$) during the post-summer monsoon months (Table `r ref("tab:nonspawner-models")`), but the models explained much more of the variance (adjusted $R^2 = 57.0$).  The most supported model for $N_t$ (Table `r ref("tab:nonspawner-models")`) used a non-linear response to landings during the post-monsoon months of the previous season $ln(N_{t-1})$ with a non-linear response to quarter 3 landings two years prior $ln(S_{t-2})$.  There was low support for including landings earlier than two seasons prior or for using the quarter 3 landings during in the immediately prior season (Tables `r ref("tabappA:nonspawner-model-time-a", pre="A")`, `r ref("tabappA:nonspawner-model-time-b", pre="A")`, and `r ref("tabappA:nonspawner-model-time-c", pre="A")`).  We did not test models for the October-June catch using the quarter 3 (July-September) catch in the current fishing season, so immediately prior. These data would not be available in a forecasting setting as the data require time to process.
+The results on model structure were similar for models of the Oct-Mar landings ($N_t$), but the models explained much more of the variance (with a maximum adjusted $R^2 = 56.6$).  The most supported model for $N_t$ (Tables `r ref("tabappA:nonspawner-model-time-a", pre="A")` and `r ref("tabappA:nonspawner-model-time-b", pre="A")`) based on AIC and F-tests used a non-linear response to Oct-Mar catch of the previous season $ln(N_{t-1})$ plus a non-linear response to Jul-Sep catch two years prior $ln(S_{t-2})$.  However the simpler model with only $ln(N_{t-1})$ had the lowest LOOCV (out of sample prediction accuracy). Thus this simpler model was also included as one of the base models for the Oct-Mar catch.   Models with Jul-Sep catch in the current fishing season were not used as these data would not be available by Oct of the current season (for forecast purposes).
+
+As diagnostic checks, we did the same model comparison for the landings data set from 1956 to 1983. The results were the same for the Jul-Sep catch (Table `r ref("tabappA:spawner-model-1956", pre="A")`) with the model with $ln(N_{t-1})$ included as a non-linear covariate with the lowest AIC and LOOCV. For the Oct-Mar catch (Table `r ref("tabappA:nonspawner-model-time-c", pre="A")`), the results were very similar but not identical. The model with $ln(N_{t-1})$ included as a non-linear covariate had the lowest LOOCV while the models with $ln(N_{t-1})$ and $ln(S_{t-2})$ or $ln(S_{t-2})$ had the lowest AIC (though less than 1 from the AIC of the $ln(N_{t-1})$ model). We also did an influential years test using Leave-One-Out crossvalidation (Appendix G). This test involved leaving out one year and repeating the model selection tests. These tests also supported the selected base models. The dynamic linear models (allowing a time-varying effect of prior catch) performed poorly for the Jul-Set catch with high AIC and LOOCV. For the Oct-Mar catch, the performance was mixed with higher AIC but lower LOOCV.
+
+Based on the model selection tests, the following non-linear model was chosen as the base model for Jul-Sep ($S_t$) catch:
+$$M1: ln(S_t) = \alpha + s(ln(N_{t-1})) + \epsilon_t.$$
+Two base non-linear models were chosen for Oct-Mar ($N_t$) catch:
+$$M2: ln(N_t) = \alpha + s_1(ln(N_{t-1})) + s_2(ln(S_{t-2})) + \epsilon_t$$
+$$M3: ln(N_t) = \alpha + s(ln(N_{t-1})) + \epsilon_t$$
+Note that although M1 was the best model for Jul-Sep catch, it was only weakly explanatory. The maximum adjusted $R^2$ was less than 30% (Table `r ref("tabappA:spawner-model-nonlinear", pre="A")`). For the Oct-Mar catch, M2 and M3 were more explanatory with an adjusted $R^2$ of 45.3% for M2 and 56.6% for M3 (Table `r ref("tabappA:nonspawner-model-time-b", pre="A")`).
+
 
 ## Environmental covariates as explanatory variables
 
