--- a/Table_Hypotheses.tex
+++ b/Table_Hypotheses.tex
@@ -1,7 +1,7 @@
 
 \begin{table}
 
-\caption{\label{tab:print-table-hyp}Table 1. Hypotheses for covariates affecting landings.  $S_t$ is quarter 3 (July-September) catch in the current season, $S_{t-1}$ is quarter 3 catch in the previous season. $N_t$ is the post-monsoon October-March catch in the current season and $N_{t-1}$ is the October-March catch in the prior season. Because the fishing season is July-June, $N_t$ spans two calendar years. DD = hypotheses related to effects of past abundance (landings) on current abundance. S = hypotheses related to catch during the spawning months. L = hypotheses related to larval and juvenile growth and survival. A = hypotheses affecting all ages. See the introduction for discussion of the literature on the effects of environmental covariates on sardine landings.}
+\caption{\label{tab:print-table-hyp}Table 1. Hypotheses for covariates affecting landings.  $S_t$ is Jul-Sep catch in the current season, $S_{t-1}$ is Jul-Sep catch in the previous season. $N_t$ is the Oct-Mar catch in the current season and $N_{t-1}$ is the Oct-Mar catch in the prior season. DD = hypotheses related to effects of past abundance (landings) on current abundance. S = hypotheses related to catch during the spawning months. L = hypotheses related to larval and juvenile growth and survival. A = hypotheses affecting all ages. See the introduction for discussion of the literature on the effects of environmental covariates on sardine landings. ns-SST = nearshore SST. r-SST = regional (nearshore and offshore) SST $t$, $t-1$, and $t-2$ indicate current, prior, and two seasons prior.}
 \centering
 \begin{tabular}[t]{>{\raggedright\arraybackslash}p{5.5cm}|>{\raggedright\arraybackslash}p{10cm}}
 \hline
@@ -14,15 +14,15 @@ DD2 \newline $S_t \sim S_{t-1} + S_{t-2}$
 \hline
 DD3 \newline $N_t \sim N_{t-1}$ & $N_{t-1}$ includes age 0, 1, 2 and 2+ fish (Nair et al. 2016). Thus the 0, 1, and 2 yr fish will appear 1 year later in the $N_t$ landings.\\
 \hline
-S1 \newline $S_t \sim$ June-July precipitation in $t$ & The magnitude of precipitation in June-July directly or indirectly signals mature fish to spawn offshore, after which the spent adults migrate inshore to the fishery (Anthony Raja 1969, 1974; Srinath 1998).\\
+S1 \newline $S_t \sim$ Jun-Jul precipitation in $t$ & The magnitude of precipitation in June-July directly or indirectly signals mature fish to spawn offshore, after which the spent adults migrate inshore to the fishery (Anthony Raja 1969, 1974; Srinath 1998).\\
 \hline
 S2 \newline $S_t \sim$ Apr-Mar precipitation in $t$ & If there is pre-monsoon rain during Apr-May then spawning begins earlier and spent adults return to the fishery sooner and are exposed to the fishery longer.\\
 \hline
 S3 \newline $N_t \sim$ Apr-Mar precipitation in $t$ & Precipitation is an indicator of climatic conditions during the period of egg development. This affect the success of spawning, thus affecting the 0-year class and the Oct-Mar catch (Antony Raja 1969, 1974; Srinath 1998).\\
 \hline
-S4 \newline $S_t \sim$ Jun-Sep upwelling index in $t$ & High rates of upwelling drive mature fish further offshore and thus leads to lower exposure to the fishery.  This movement may be driven by advection of high phytoplankton biomass further offshore or increased inputs of low oxygenated water to the surface (Murty and Edelman 1970, Antony Raja 1973, Pillai et al. 1991).\\
+S4 \newline $S_t \sim$ Jun-Sep UPW in $t$ & High rates of upwelling drive mature fish further offshore and thus leads to lower exposure to the fishery.  This movement may be driven by advection of high phytoplankton biomass further offshore or increased inputs of low oxygenated water to the surface (Murty and Edelman 1970, Antony Raja 1973, Pillai et al. 1991).\\
 \hline
-S5 \newline $S_t \sim$ SST during Mar-May in $t$ \newline $N_t \sim$ SST during Mar-May in $t$ & Extreme heating events prior to the spring monsoon drives mature fish from the spawning areas, resulting in poor recruitment and fewer age 0 year fish in the Oct-Mar catch (Antony Raja 1973, Pillai et al 1991).\\
+S5 \newline $S_t \sim$ Mar-May r-SST in $t$ \newline $N_t \sim$ Mar-May r-SST in $t$ & Extreme heating events prior to the spring monsoon drives mature fish from the spawning areas, resulting in poor recruitment and fewer age 0 year fish in the Oct-Mar catch (Antony Raja 1973, Pillai et al 1991).\\
 \hline
 \end{tabular}
 \end{table}
@@ -35,13 +35,13 @@ S5 \newline $S_t \sim$ SST during Mar-May in $t$ \newline $N_t \sim$ SST during 
 \hline
 Hypothesis & Description\\
 \hline
-L1 \newline $S_t \sim$ Oct-Dec nearshore SST $t-1$ \newline $N_t \sim$ Oct-Dec nearshore SST $t-1$ & Larval and juvenile growth and survival is affected by temperature. The temperature in the critical post-monsoon window, when somatic growth of the 0-year fish is highest, should be correlated with future abundance.\\
+L1 \newline $S_t \sim$ Oct-Dec ns-SST $t-1$ \newline $N_t \sim$ Oct-Dec ns-SST $t-1$ & Larval and juvenile growth and survival is affected by temperature. The temperature in the critical post-monsoon window, when somatic growth of the 0-year fish is highest, should be correlated with future abundance.\\
 \hline
 L2 \newline $S_t \sim$ Jun-Sep UPW in $t-1$ \& $t$ \newline $N_t \sim$ Jun-Sep UPW in $t-1$ \& $t$ & Higher upwelling rates leads to greater phytoplankton productivity, better larval and juvenile growth, and higher landings in the post monsoon Oct-March catch. However, extreme upwelling may decrease this catch, and future catches, due to poor oxygen conditions or advection of phytoplankton biomass.\\
 \hline
 L3 \newline $S_t\sim$ CHL in $t-1$ \& $t$ \newline $N_t \sim$ CHL in $t-1$ \& $t$ & Surface Chl-a is a proxy for phytoplankton abundance and thus food availability, so higher bloom intensities may support greater fish abundance in the current and future years.\\
 \hline
-A1 \newline $S_t \sim$ 2.5-yr ave. nearshore SST \newline $N_t \sim$ 2.5-yr ave. nearshore SST & Spawning, early survival, and recruitment of sardines depends on a multitude of cascading factors summarized by the multi-year average  nearshore SST. The multi-year average SST has been correlated with recruitment and abundance in other sardines (Checkley et al. 2017) and is related to the optimal temperature windows for sardines (Takasuka et al. 2007).\\
+A1 \newline $S_t \sim$ 2.5-yr ave. ns-SST \newline $N_t \sim$ 2.5-yr ave. ns-SST & Spawning, early survival, and recruitment of sardines depends on a multitude of cascading factors summarized by the multi-year average  nearshore SST. The multi-year average SST has been correlated with recruitment and abundance in other sardines (Checkley et al. 2017) and is related to the optimal temperature windows for sardines (Takasuka et al. 2007).\\
 \hline
 A2 \newline $S_t \sim$ ONI in $t-1$ \newline $N_t \sim$ ONI in $t-1$ & The El Nino/Southern Oscillation (ENSO) impacts a range of environmental parameters (e.g., precipitation, SST, frontal zones, winds, etc.) that may impact spawning and early survival of sardines (Supraba et al. 2016, Rohit et al. 2018).\\
 \hline
